# additive-manufacturing

./: .gitignore  MANIFEST.in  README.md  default.json  junit.xml  junitxml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.claude/agents/: am.md
.github/workflows/: claude-code.yml  codex.yml  gemini-cli.yml  pytest.yml
am/: .gitignore
examples/agent/: README.md  pyproject.toml
examples/mcp/: README.md
notes/: rosenthal.ipynb
src/am/: __init__.py
src/am/benchmark/: cli.py
src/am/cli/: __init__.py  __main__.py  options.py  version.py  workspace_initialize.py
src/am/config/: __init__.py  build_parameters.py  mcp.py  mesh_parameters.py  process_map.py  segment.py
src/am/mcp/: __main__.py  install.py  resources.py  run.py  tools.py  workspace.py
src/am/portfolio/: __init__.py  base.py  workspace.py
src/am/process_map/: __main__.py  classification.py  create.py  generate.py  initialize.py  mcp.py  models.py  plot.py  run.py  utils.py
src/am/schema/: __init__.py  build_parameters.py  quantity.py
src/am/segmenter/: __init__.py  __main__.py  base.py  config.py  gcode.py  mcp.py  parse.py  shape_2d.py  types.py  visualize.py
src/am/segmenter_old/: __init__.py
src/am/simulation/: __init__.py  base.py  utils.py  visualize.py
src/am/simulator/: models.py
src/am/slicer/: models.py  planar.py
src/am/solver/: __init__.py  __main__.py  base.py  config.py  layer.py  mcp.py  measure.py  mesh.py  mesh_old.py  models.py  segment.py  types.py  utils.py
src/am/toolpath/: __init__.py  slicer_planar.py
src/notes/: rosenthal.ipynb
test/: conftest.py
test/cli/: test_main.py  test_utils.py
tests/: conftest.py
tests/cli/: test_main.py  test_options.py
tests/config/: test_build_parameters.py  test_material.py  test_mcp.py  test_mesh_parameters.py  test_process_map.py
tests/part/: test_initialize.py
tests/process_map/: test_classification.py  test_create.py  test_models.py  test_plot.py  test_run.py  test_schema.py  test_utils.py
tests/schema/: test_build_parameters.py  test_material.py  test_mesh_parameters.py  test_quantity_dict.py  test_quantity_model.py  test_quantity_parse_cli_input.py  test_segment.py
tests/solver/: test_mesh.py  test_segment.py
tests/workspace/: test_configs.py  test_create.py  test_parts.py
workspaces/test/: workspace.json
(+154 files in other folders)
