[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finetune-am"
version = "0.0.1"
authors = [
  { name="Peter Pak", email="ppak10@gmail.com" },
  { name="Francis Ogoke", email="oogoke@andrew.cmu.edu" },
]
description = "Additive Manufacturing related tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ppak10/finetune-am"
Issues = "https://github.com/ppak10/finetune-am/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
	"test",
]


[tool.black]
line-length = 88          # Set max line length
target-version = ['py310'] # Target specific Python version
